# attovisio

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
attovisio/: __init__.py  events.py  io_observer.py  narration.py  network_watcher.py  security_auditor.py  system_monitor.py  tracer.py  visualization.py
examples/: demo_advanced.py  demo_basic.py  tutoriel_jupyter.ipynb
tests/: __init__.py  test_attovisio.py
