[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "attovisio"
version = "0.1.0"
description = "Rend visibles les actions invisibles en informatique : appels, fichiers, réseau, ressources, sécurité."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Attobra Prince", email = "itprince898@gmail.com" }
]
keywords = ["tracing", "debugging", "monitoring", "security", "observability", "pedagogy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Security",
    "Topic :: Education",
]
requires-python = ">=3.8"
dependencies = []   # aucune dépendance obligatoire

[project.optional-dependencies]
full = ["psutil>=5.9.0"]
dev  = ["psutil>=5.9.0", "pytest>=7.0", "pytest-cov>=4.0", "black", "flake8", "mypy"]

[project.urls]
Homepage      = "https://github.com/attobraprince34-sketch/attovisio"
Documentation = "https://github.com/attobraprince34-sketch/attovisio#readme"
Repository    = "https://github.com/attobraprince34-sketch/attovisio"
"Bug Tracker" = "https://github.com/attobraprince34-sketch/attovisio/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "docs*"]

# ──────────────────────────────────────────────
# Outils de développement
# ──────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts       = "-v --tb=short"

[tool.coverage.run]
source   = ["attovisio"]
omit     = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.black]
line-length    = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.flake8]
max-line-length = 100
extend-ignore   = ["E203", "W503"]
exclude         = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict_optional = true
